fixed team-cards, removed whitespaces

--- a/_sass/teamnexus.scss
+++ b/_sass/teamnexus.scss
@@ -22,15 +22,6 @@ body {
 }
 
 /*
- * Cards
- */
-.card-columns {
-	@include media-breakpoint-only(lg) {
-		column-count: 4;
-	}
-}
-
-/*
  * Utils
  */
 .gap-xx {
